--- a/res/xml/main.xml
+++ b/res/xml/main.xml
@@ -8,4 +8,10 @@
         android:fragment="com.evervolv.toolbox.activities.Lockscreen"
         android:title="@string/pref_lockscreen_settings_title_head"
         />
+    <!-- Statusbar Settings -->
+    <header
+        android:id="@+id/statusbar_settings"
+        android:fragment="com.evervolv.toolbox.activities.Statusbar"
+        android:title="@string/pref_statusbar_settings_title_head"
+        />
 </preference-headers>
