add lockscreen volume button music control (EVToolbox part)
  * long-press vol up for next, vol down for previous
  * screen must be off

Change-Id: I25cefbffcff67e0ba333ce1b7e3aff2e797196f2

--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -28,4 +28,14 @@
             android:title="@string/pref_lockscreen_custom_app_title"/>
 
     </PreferenceCategory>
+
+    <!-- Lockscreen music controls -->
+    <PreferenceCategory android:title="@string/pref_lockscreen_cat_music_controls_title">
+
+        <CheckBoxPreference
+            android:key="pref_lockscreen_music_controls_volbtn"
+            android:title="@string/pref_lockscreen_music_controls_volbtn_title"
+            android:summary="@string/pref_lockscreen_music_controls_volbtn_summary"/>
+    </PreferenceCategory>
+
 </PreferenceScreen>
