Fix a few things, don't submit yet.
Change-Id: I21754daa9430b611dc6d43cd0c75b2ab77478ccd

--- a/res/xml/lockscreen_style.xml
+++ b/res/xml/lockscreen_style.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    android:title="pref_lockscreen_style_title">
     <!-- Lockscreen style -->
     <PreferenceCategory android:title="@string/lockscreen_title">
 
