--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -6,5 +6,12 @@
             android:summary="@string/pref_notification_toolbox_summary"
             android:fragment="com.evervolv.toolbox.activities.Statusbar$NotifToolbox">
     </PreferenceScreen>
+
+    <PreferenceScreen
+            android:key="pref_statusbar_icons"
+            android:title="@string/pref_statusbar_icons_title"
+            android:summary="@string/pref_statusbar_icons_summary"
+            android:fragment="com.evervolv.toolbox.activities.Statusbar$StatusIcons">
+    </PreferenceScreen>
 </PreferenceScreen>
 
