--- a/res/xml/main.xml
+++ b/res/xml/main.xml
@@ -14,4 +14,10 @@
         android:fragment="com.evervolv.toolbox.activities.Statusbar"
         android:title="@string/pref_statusbar_title_head"
         />
+    <!-- Interface Settings -->
+    <header
+        android:id="@+id/interface_settings"
+        android:fragment="com.evervolv.toolbox.activities.Interface"
+        android:title="@string/pref_interface_title_head"
+        />
 </preference-headers>
