EVToolbox: volume button wake toggle
moved vol music controls into interface/buttons
volume wake disables the ability to use music controls
(this happens even on cm7)
so i made the options disable each other when checked
to try and prevent user confusion when using vol wake
music control is still default on
volume wake defaults to off

Change-Id: I45328276ac3b010a7efd751768785bc91a2b77d7

--- a/res/xml/interface_buttons.xml
+++ b/res/xml/interface_buttons.xml
@@ -8,5 +8,17 @@
             android:summary="@string/pref_trackball_wake_toggle_summary">
         </CheckBoxPreference>
 
+        <CheckBoxPreference android:key="pref_volume_wake_toggle"
+            android:title="@string/pref_volume_wake_toggle_title"
+            android:summary="@string/pref_volume_wake_toggle_summary">
+        </CheckBoxPreference>
+
+        <!-- Lockscreen music controls -->
+        <CheckBoxPreference
+            android:key="pref_lockscreen_music_controls_volbtn"
+            android:title="@string/pref_lockscreen_music_controls_volbtn_title"
+            android:summary="@string/pref_lockscreen_music_controls_volbtn_summary">
+        </CheckBoxPreference>
+
     </PreferenceCategory>
 </PreferenceScreen>
