--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -39,6 +39,18 @@
         <item>3</item>
     </string-array>
 
+    <string-array name="lockscreen_custom_app_entries">
+        <item>App shortcut</item>
+        <item>Unlock toggle</item>
+        <item>Sound toggle</item>
+    </string-array>
+
+    <string-array name="lockscreen_custom_app_values" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
     <string-array name="lockscreen_ring_locations_entries">
         <item>Right side</item>
         <item>Left side</item>
