toggle for whether to show notifications or toolbox on statusbar pulldown
Change-Id: Ie69d88cd42cc6274653fc952658289856a134e90

--- a/res/xml/notification_toolbox.xml
+++ b/res/xml/notification_toolbox.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+        <CheckBoxPreference android:key="pref_notification_toolbox_dropdown"
+            android:title="@string/pref_notification_toolbox_dropdown_title"
+            android:summary="@string/pref_notification_toolbox_dropdown_summary">
+        </CheckBoxPreference>
 	<PreferenceCategory
         android:title="@string/category_statusbar_add_widgets"
 	    android:key="pref_category_statusbar_add_widgets">
