EVToolbox: Add option for setting the max widgets per line in the...
notification toolbox.

Change-Id: I6433345ce7e88362c51c413a2c107ef7f53376ac

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -69,4 +69,22 @@
         <item>5</item>
     </string-array>
 
+    <string-array name="toolbox_max_widgets_per_line_entries">
+        <item>1 per line</item>
+        <item>2 per line</item>
+        <item>3 per line</item>
+        <item>4 per line</item>
+        <item>5 per line</item>
+        <item>6 per line</item>
+    </string-array>
+
+    <string-array name="toolbox_max_widgets_per_line_values" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
+
 </resources>
