--- a/res/xml/main.xml
+++ b/res/xml/main.xml
@@ -20,4 +20,10 @@
         android:fragment="com.evervolv.toolbox.activities.Interface"
         android:title="@string/pref_interface_title_head"
         />
+    <!-- Notification Toolbox Settings -->
+    <header
+        android:id="@+id/notification_toolbox_settings"
+        android:fragment="com.evervolv.toolbox.activities.NotificationToolbox"
+        android:title="@string/pref_notification_toolbox_title_head"
+        />
 </preference-headers>
