--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -87,4 +87,33 @@
         <item>6</item>
     </string-array>
 
+    <string-array name="entries_heapsize">
+        <item>12m</item>
+        <item>16m</item>
+        <item>24m</item>
+        <item>32m</item>
+        <item>48m</item>
+    </string-array>
+
+    <string-array name="values_heapsize" translatable="false">
+        <item>12m</item>
+        <item>16m</item>
+        <item>24m</item>
+        <item>32m</item>
+        <item>48m</item>
+    </string-array>
+
+    <string-array name="pref_zram_size_entries">
+        <item>Disabled (default)</item>
+        <item>10%</item>
+        <item>18%</item>
+        <item>26%</item>
+    </string-array>
+
+    <string-array name="pref_zram_size_values" translatable="false">
+        <item>0</item>
+        <item>10</item>
+        <item>18</item>
+        <item>26</item>
+    </string-array>
 </resources>
