--- a/res/xml/main.xml
+++ b/res/xml/main.xml
@@ -26,4 +26,10 @@
         android:fragment="com.evervolv.toolbox.activities.NotificationToolbox"
         android:title="@string/pref_notification_toolbox_title_head"
         />
+    <!-- Performance Settings -->
+    <header
+        android:id="@+id/performance_settings"
+        android:fragment="com.evervolv.toolbox.activities.Performance"
+        android:title="@string/pref_performance_title_head"
+        />
 </preference-headers>
