Settings : Vol long press skip tracks (2/2)
Part 1 : http://review.cyanogenmod.com/#change,13121

Allow user to toggle this feature (Default off)

Patchset 2 : Fix wrong key reference
Patchset 3 : Minor fixes
Patchset 4 : Renaming fix
Patchset 5 : Rebase
Patchset 6 : Rebase

Change-Id: Id79b08ba5d8a7e8ddc9c34015380b450dbba8b38

--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -112,4 +112,16 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:key="volume_keys"
+        android:title="@string/volume_keys_title" >
+
+        <evervolv.preference.EVSystemSettingSwitchPreference
+            android:key="volbtn_music_controls"
+            android:title="@string/volbtn_music_controls_title"
+            android:summary="@string/volbtn_music_controls_summary"
+            android:defaultValue="true" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
