EVToolbox: Change list of widgets to use.
* Doing this to make it easier for enabling/disabling supported/unsupported
  widgets. By default, most supported widgets are enabled (ie, bluetooth,
  wifi, mobile data, etc..)
* Support for each widget can be added/removed by setting its value
  in the devices overlay.
* Initial config options added: Bluetooth, Wimax, Mobile Data & Gps.

Change-Id: Ib7013817e481a3d633656c82d30cf3fadf74f97e

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -2,4 +2,10 @@
 <resources>
     <!-- Whether or not to display the trackball settings -->
     <bool name="has_trackball">false</bool>
+
+    <!-- Notification toolbox widges -->
+    <bool name="config_has_gps" translatable="false">true</bool>
+    <bool name="config_has_wimax" translatable="false">false</bool>
+    <bool name="config_has_bluetooth" translatable="false">true</bool>
+    <bool name="config_has_mobile_data" translatable="false">true</bool>
 </resources>
