set EVToolbox list prefs to have the default value marked instead of nothing
Change-Id: I260c117ec79309a6492c2da050059e53b3aaa7b7

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -18,9 +18,9 @@
 <resources>
 
     <string-array name="lockscreen_style_entries">
-        <item>Gingerbread style</item>
-        <item>Eclair style</item>
-        <item>Ice Cream Sandwich style</item>
+        <item>Ice Cream Sandwich</item>
+        <item>Gingerbread</item>
+        <item>Eclair</item>
     </string-array>
 
     <string-array name="lockscreen_style_values" translatable="false">
