EVToolbox: Remove Sixbar preference for devices without mobile radios.
Change-Id: I04946b22822fe17844a9a6d88824a56cc633c59f

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -8,4 +8,5 @@
     <bool name="config_has_wimax" translatable="false">false</bool>
     <bool name="config_has_bluetooth" translatable="false">true</bool>
     <bool name="config_has_mobile_data" translatable="false">true</bool>
+    <bool name="config_has_mobile_radio" translatable="false">true</bool>
 </resources>
