Add basic Rotation settings UI
Based on commit from:
https://github.com/jonasl/android_packages_apps_CMSettings/commit/
f97ae31d4ee420786b9ababcaecbeb65ed6ab0cc#diff-3



Change-Id: I5d5a7f227d2df2a83e34f8e9953b9e22300c4cc8

--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -5,4 +5,9 @@
         android:summary="@string/pref_interface_buttons_summary"
         android:fragment="com.evervolv.toolbox.activities.Interface$Buttons">
     </PreferenceScreen>
+    <PreferenceScreen android:key="pref_interface_rotation"
+        android:title="@string/pref_interface_rotation_title"
+        android:summary="@string/pref_interface_rotation_summary"
+        android:fragment="com.evervolv.toolbox.activities.Interface$Rotation">
+    </PreferenceScreen>
 </PreferenceScreen>
