[WIP] EVToolbox: New Preference widget for choosing lockscreens.
 * New preference can be used in other situations also.
 * Moved 3-way checkbox to a style option. (Adding more).

TODO: Need to clean up some code, some of the logic is just weird to me.

Change-Id: Ib5e01ab9a2bc2f86dd0b93b1592f230c9c34a4c3

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -17,17 +17,19 @@
 
 <resources>
 
-    <string-array name="lockscreen_style_entries">
+    <array name="lockscreen_style_captions" >
         <item>Ice Cream Sandwich</item>
+        <item>Ice Cream Sandwich (3Way)</item>
         <item>Gingerbread</item>
         <item>Eclair</item>
-    </string-array>
+    </array>
 
-    <string-array name="lockscreen_style_values" translatable="false">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
+    <array name="lockscreen_style_drawables" translatable="false">
+        <item>@drawable/lock_ics_2way</item>
+        <item>@drawable/lock_ics_3way</item>
+        <item>@drawable/lock_gingerbread</item>
+        <item>@drawable/lock_eclair</item>
+    </array>
 
     <string-array name="lockscreen_custom_app_entries">
         <item>App shortcut</item>
