--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -22,6 +22,7 @@
         <item>Ice Cream Sandwich (3Way)</item>
         <item>Gingerbread</item>
         <item>Eclair</item>
+        <item>Honeycomb</item>
     </array>
 
     <array name="lockscreen_style_drawables" translatable="false">
@@ -29,6 +30,7 @@
         <item>@drawable/lock_ics_3way</item>
         <item>@drawable/lock_gingerbread</item>
         <item>@drawable/lock_eclair</item>
+        <item>@drawable/lock_honeycomb</item>
     </array>
 
     <string-array name="lockscreen_custom_app_entries">
