EVToolbox: Add setting to specify power menu screenshot delay.
Change-Id: I1c0874fb0c96913e444dbca89a4eb40be733d94e

--- a/res/xml/interface_power_menu.xml
+++ b/res/xml/interface_power_menu.xml
@@ -17,4 +17,8 @@
             android:title="@string/pref_power_menu_show_reboot_menu_title">
         </CheckBoxPreference>
 
+        <com.evervolv.toolbox.utils.NumberPickerPreference android:key="pref_power_menu_screenshot_delay"
+            android:title="@string/pref_power_menu_screenshot_delay_title">
+        </com.evervolv.toolbox.utils.NumberPickerPreference>
+
 </PreferenceScreen>
