EVToolbox: Reconfigure managing widgets. Includes reodering now.
 * Widgets can now be reordered in 'Manage Widgets' dialog.
 * To remove a widget, long-press the item and press 'Remove'
 * A ViewFlipper is used to go back and forth with the add/manage
   view. (Press Add & Cancel)

Change-Id: Ib6a821bfb73b9fe4714c3f831c115daaf8ca38f2

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -16,4 +16,12 @@
 
 <resources>
     <dimen name="action_bar_switch_padding">16dip</dimen>
+    <dimen name="normal_height">64dip</dimen>
+    <dimen name="expanded_height">128dip</dimen>
+
+    <!-- Dialog title height -->
+    <dimen name="alert_dialog_title_height">64dip</dimen>
+    <!-- Dialog button bar height -->
+    <dimen name="alert_dialog_button_bar_height">48dip</dimen>
+
 </resources>
