EVToolbox: Add config option to disable eclair lockscreen.
 * I can't get the lockscreen to look right on tablets. Doing this in the
   mean time.

Change-Id: I432de09168d8d509bea9a8dc82e1d6e0a2e7fb52

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -9,4 +9,5 @@
     <bool name="config_has_bluetooth" translatable="false">true</bool>
     <bool name="config_has_mobile_data" translatable="false">true</bool>
     <bool name="config_has_mobile_radio" translatable="false">true</bool>
+    <bool name="config_allow_eclair_lock" translatable="false">true</bool>
 </resources>
