EVToolbox: Forward Toolbox to jellybean
 * All classes that are currently unused have been renamed to .old
 * All references have been commented out.
 * This is a starting point for jellybean, when a feature is ready, we
   should only need to uncomment and rename its classes and references.

Change-Id: I61103e903a30a018d9c5100755449a6c59699f3d

--- a/res/xml/main.xml
+++ b/res/xml/main.xml
@@ -3,33 +3,43 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Lockscreen Settings -->
+<!--
     <header
         android:id="@+id/lockscreen_settings"
         android:fragment="com.evervolv.toolbox.activities.Lockscreen"
         android:title="@string/pref_lockscreen_title_head"
         />
+-->
     <!-- Statusbar Settings -->
+<!--
     <header
         android:id="@+id/statusbar_settings"
         android:fragment="com.evervolv.toolbox.activities.Statusbar"
         android:title="@string/pref_statusbar_title_head"
         />
+-->
     <!-- Interface Settings -->
+<!--
     <header
         android:id="@+id/interface_settings"
         android:fragment="com.evervolv.toolbox.activities.Interface"
         android:title="@string/pref_interface_title_head"
         />
-    <!-- Notification Toolbox Settings -->
+-->
+    <!-- QwikWidgets Settings -->
+<!--
     <header
         android:id="@+id/qwik_widgets_settings"
         android:fragment="com.evervolv.toolbox.activities.QwikWidgets"
         android:title="@string/pref_qwik_widgets_title_head"
         />
+-->
     <!-- Performance Settings -->
+<!--
     <header
         android:id="@+id/performance_settings"
         android:fragment="com.evervolv.toolbox.activities.Performance"
         android:title="@string/pref_performance_title_head"
         />
+-->
 </preference-headers>
