--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -5,6 +5,7 @@
         android:summary="@string/pref_interface_buttons_summary"
         android:fragment="com.evervolv.toolbox.activities.Interface$Buttons">
     </PreferenceScreen>
+<!--
     <PreferenceScreen android:key="pref_interface_rotation"
         android:title="@string/pref_interface_rotation_title"
         android:summary="@string/pref_interface_rotation_summary"
@@ -14,5 +15,6 @@
         android:title="@string/pref_interface_power_menu_title"
         android:summary="@string/pref_interface_power_menu_summary"
         android:fragment="com.evervolv.toolbox.activities.Interface$PowerMenu">
-    </PreferenceScreen>
+    </PreferenceScreen
+-->
 </PreferenceScreen>
