EVToolbox: Enable lockscreen style:
 * Limited to jb, ics, gb and eclair lockscreens.
 * All code for custom targets has been commented out for now.

 TODO: Need preview image for jellybean lockscreen.

Change-Id: Ibcdaae7b6bde900dfda63a700ffac2f4610be0b3

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -18,19 +18,17 @@
 <resources>
 
     <array name="lockscreen_style_captions" >
+        <item>Jellybean</item>
         <item>Ice Cream Sandwich</item>
-        <item>Ice Cream Sandwich (3Way)</item>
         <item>Gingerbread</item>
         <item>Eclair</item>
-        <item>Honeycomb</item>
     </array>
 
     <array name="lockscreen_style_drawables" translatable="false">
-        <item>@drawable/lock_ics_2way</item>
-        <item>@drawable/lock_ics_3way</item>
+        <item>@drawable/lock_jb</item>
+        <item>@drawable/lock_ics</item>
         <item>@drawable/lock_gingerbread</item>
         <item>@drawable/lock_eclair</item>
-        <item>@drawable/lock_honeycomb</item>
     </array>
 
     <string-array name="lockscreen_custom_app_entries">
