Buttons: Allow disabling hard navigation keys
This adds support for enabling the navbar on devices with
hardware keys.
This requires that the device supports the KeyDisabler
HAF methods, and is available in the Buttons menu

Change-Id: I01bd83b312745b4a8aa3bde0cf5f02ea99a888cc

--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -18,6 +18,12 @@
         android:key="button_settings"
         android:title="@string/button_settings_title">
 
+    <SwitchPreference
+        android:key="disable_nav_keys"
+        android:title="@string/disable_navkeys_title"
+        android:summary="@string/disable_navkeys_summary"
+        android:defaultValue="false" />
+
     <PreferenceCategory
         android:key="home_key"
         android:title="@string/home_key_title" >
