EVToolbox: Add transparent lockscreen toggle.
Change-Id: I888b75dd3152bf5df6de9b91170219142f311d4f

--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -9,4 +9,8 @@
             android:fragment="com.evervolv.toolbox.activities.Lockscreen$LockStyle">
     </PreferenceScreen>
 
+    <CheckBoxPreference
+        android:key="pref_lockscreen_transparent"
+        android:title="@string/pref_lockscreen_transparent"/>
+
 </PreferenceScreen>
