EVToolbox: Add toggle for sense 4.0 recent apps view.
Change-Id: I82ecd0b729306d1342d462afe833760543774e8a

--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -5,6 +5,11 @@
         android:summary="@string/pref_interface_buttons_summary"
         android:fragment="com.evervolv.toolbox.activities.Interface$Buttons">
     </PreferenceScreen>
+
+    <CheckBoxPreference
+        android:key="pref_interface_sense4_recent_apps"
+        android:title="@string/pref_interface_sense4_recent_apps_title"
+        android:summary="@string/pref_interface_sense4_recent_apps_summary" />
 <!--
     <PreferenceScreen android:key="pref_interface_rotation"
         android:title="@string/pref_interface_rotation_title"
