--- a/res/xml/interface_settings.xml
+++ b/res/xml/interface_settings.xml
@@ -16,11 +16,10 @@
         android:summary="@string/pref_interface_rotation_summary"
         android:fragment="com.evervolv.toolbox.activities.Interface$Rotation">
     </PreferenceScreen>
-<!--
+
     <PreferenceScreen android:key="pref_interface_power_menu"
         android:title="@string/pref_interface_power_menu_title"
         android:summary="@string/pref_interface_power_menu_summary"
         android:fragment="com.evervolv.toolbox.activities.Interface$PowerMenu">
-    </PreferenceScreen
--->
+    </PreferenceScreen>
 </PreferenceScreen>
