--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -10,4 +10,8 @@
     <bool name="config_has_mobile_data" translatable="false">true</bool>
     <bool name="config_has_mobile_radio" translatable="false">true</bool>
     <bool name="config_allow_eclair_lock" translatable="false">true</bool>
+
+    <bool name="config_disableTabletForce" translatable="false">false</bool>
+    <string name="config_defaultDpi" translatable="false">-1</string>
+    <string name="config_recommendedTabletDpi" translatable="false">-1</string>
 </resources>
