EVToolbox: Add support for a custom lockscreen message
Change-Id: I98e9778b07a2e463d856e19d1c81eb2e83341f16

--- a/res/xml/lockscreen_settings.xml
+++ b/res/xml/lockscreen_settings.xml
@@ -9,6 +9,11 @@
             android:fragment="com.evervolv.toolbox.activities.Lockscreen$LockStyle">
     </PreferenceScreen>
 
+    <EditTextPreference
+        android:key="pref_lockscreen_message"
+        android:title="@string/pref_lockscreen_message_title"
+        android:dialogTitle="@string/pref_lockscreen_message_dialog_title"/>
+
     <CheckBoxPreference
         android:key="pref_lockscreen_transparent"
         android:title="@string/pref_lockscreen_transparent"/>
