evtoolbox: Add customizable lockscreen background
 * loosely based on: http://goo.gl/lPPLw
 * Can set a fill color, custom image and completely transparent with
   desktop showing.

Change-Id: I1a4df1c64b786294f0fafd4fd442ed5df0613811

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -31,6 +31,20 @@
         <item>@drawable/lock_eclair</item>
     </array>
 
+    <string-array name="lockscreen_background_entries" translatable="false">
+        <item>@string/lockscreen_background_color_fill</item>
+        <item>@string/lockscreen_background_custom_image</item>
+        <item>@string/lockscreen_background_default_wallpaper</item>
+        <item>@string/lockscreen_background_transparent</item>
+    </string-array>
+
+    <string-array name="lockscreen_background_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
     <string-array name="lockscreen_custom_app_entries">
         <item>App shortcut</item>
         <item>Unlock toggle</item>
