EVToolbox: Add an option to track updates.
 * Includes: Releases, nightlies, and test builds for each device.
 * Allows for multiple simultaneous downloads.
 * Downloads are tracked via the UI using the Android DownloadManager, which
   also supplies a notification for progress (to be removed in the future).
 * All downloads are housed in SDCARD:EVupdates/{gapps, nightly, release,
   testing}/
 * TWRP is exclusively supported for now, other support may follow.
 * Scheduling to check for updates is working / implemented. But
   notifications will be added in the future.

Change-Id: I05e429b898cb376aa53490bb9ab41e58010c962a

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -134,4 +134,23 @@
         <item>18</item>
         <item>26</item>
     </string-array>
+
+    <string-array name="updates_schedule_entries">
+        <item>Never</item>
+        <item>On boot</item>
+        <item>Daily</item>
+        <item>Weekly</item>
+        <item>Bi-weekly</item>
+        <item>Monthly</item>
+    </string-array>
+
+    <string-array name="updates_schedule_entry_values" translatable="false">
+        <item>-2</item>
+        <item>-1</item>
+        <item>86400</item>
+        <item>604800</item>
+        <item>1209600</item>
+        <item>2419200</item>
+    </string-array>
+
 </resources>
